--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Logo -->
     <div class="header-brand">
       <a href="#" class="logo-link">
-        <img src="image/logo.png" alt="Making Money Blog Logo" class="logo-img">
+        <img src="logo.png" alt="Making Money Blog Logo" class="logo-img">
       </a>
       <span class="brand-slogan no-border">Sustainable Online Income</span>
     </div>
@@ -84,7 +84,7 @@
                     <section id="evaluation-criteria">
                     <h2>Criteria for evaluating online money-making websites</h2>
                     <div class="web-image">
-                       <img src="image/thinks.jpg" alt="thinks" loading="lazy">
+                       <img src="thinks.jpg" alt="thinks" loading="lazy">
                     </div>
                     <p>Prior to compiling our recommendations, we conducted a thorough assessment based on these key criteria:</p>
                     <ul>
@@ -110,7 +110,7 @@
         <strong>Why Choose Surveoo?</strong>
         <p>Surveoo is an ideal paid survey platform for those looking to earn extra income during their free time. Instead of creating complex content, you simply need to spend 10-15 minutes daily completing straightforward surveys. This earning method requires no special skills and is accessible to everyone.</p>
         <div class="web-image">
-          <img src="image/surveoo.jpg" alt="Surveoo" loading="lazy">
+          <img src="surveoo.jpg" alt="Surveoo" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -133,7 +133,7 @@
         <strong>Why Choose Swagbucks?</strong>
         <p>More than just a survey site, Swagbucks is a comprehensive "earning marketplace" offering multiple income streams. Perfect for users seeking diverse earning opportunities without monotony.</p>
         <div class="web-image">
-          <img src="image/swagbucks.png" alt="Swagbucks" loading="lazy">
+          <img src="swagbucks.png" alt="Swagbucks" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -156,7 +156,7 @@
         <strong>Why Choose Pinecone Research?</strong>
         <p>Pinecone Research specializes in premium surveys for users seeking higher earnings per survey. While the entry requirements are stricter, the rewards are substantially more attractive.</p>
         <div class="web-image">
-          <img src="image/pineconeresearch.png" alt="PineconeResearch" loading="lazy">
+          <img src="pineconeresearch.png" alt="PineconeResearch" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -179,7 +179,7 @@
         <strong>Why Choose InboxDollars?</strong>
         <p>InboxDollars is perfect for those wanting to earn online with minimal time investment, offering income opportunities as simple as reading emails or browsing the web.</p>
         <div class="web-image">
-          <img src="image/inboxdollars.jpg" alt="InboxDollars" loading="lazy">
+          <img src="inboxdollars.jpg" alt="InboxDollars" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -202,7 +202,7 @@
         <strong>Why Choose LifePoints?</strong>
         <p>LifePoints is a reputable international survey platform, ideal for users seeking quality surveys from multinational brands.</p>
         <div class="web-image">
-          <img src="image/lifepoints.png" alt="LifePoints" loading="lazy">
+          <img src="lifepoints.png" alt="LifePoints" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -259,17 +259,17 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="image/test2.png" alt="Related article" loading="lazy">
-                            <a href="https://wedebeek.com/click?pid=3128&offer_id=18384"></a>
+                            <img src="test2.png" alt="Related article" loading="lazy">
+                            <a href=""></a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://wedebeek.com/click?pid=3128&offer_id=18384">How to make money online without capital</a></h4>
+                            <h4><a href="">How to make money online without capital</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="image/test1.png" alt="Related article" loading="lazy">
+                            <img src="test1.png" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
                             <h4><a href="#">Top 10 money-making apps for smartphones</a></h4>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="image/test3.png" alt="Related article" loading="lazy">
+                            <img src="test3.png" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
                             <h4><a href="#">Guide to making money from affiliate marketing</a></h4>
@@ -287,7 +287,7 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="image/test4.png" alt="Related article" loading="lazy">
+                            <img src="test4.png" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
                             <h4><a href="#">Online money-making scam warnings</a></h4>
@@ -407,7 +407,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="image/logo.png" alt="Logo">
+                    <img src="logo.png" alt="Logo">
                     <p>Specialized in reviewing reputable and effective online money-making methods today.</p>
                     <div class="footer-social">
                         <a href="https://x.com/Phamphuc26?t=QWW8s3R5WlJ584fVOEj_PA&s=09" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
