--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <!-- Logo -->
     <div class="header-brand">
       <a href="#" class="logo-link">
-        <img src="image/logo.png" alt="Making Money Blog Logo" class="logo-img">
+        <img src="logo.png" alt="Making Money Blog Logo" class="logo-img">
       </a>
       <span class="brand-slogan no-border">Sustainable Online Income</span>
     </div>
