--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <li class="nav-item"><a href="#evaluation-criteria" class="nav-link">Review Standards</a></li>
         <li class="nav-item"><a href="#top-platforms" class="nav-link">Top Earners</a></li>
         <li class="nav-item"><a href="#conclusion" class="nav-link">Final Pick</a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-        <li class="nav-item"><a href="privacy-policy.html" class="nav-link">Privacy Policy</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+        <li class="nav-item"><a href="/privacy-policy" class="nav-link">Privacy Policy</a></li>
     </ul>
     </nav>
 
