--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
     <nav class="header-nav">
       <ul class="nav-list">
         <li class="nav-item"><a href="/" class="nav-link">Blog</a></li>
-        <li class="nav-item"><a href="about" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="contact" class="nav-link">Contact</a></li>
-        <li class="nav-item"><a href="privacy-policy" class="nav-link">Privacy Policy</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+        <li class="nav-item"><a href="/privacy-policy" class="nav-link">Privacy Policy</a></li>
       </ul>
     </nav>
 
