--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="header-container">
     <!-- Logo -->
     <div class="header-brand">
-      <a href="#" class="logo-link">
+      <a href="/" class="logo-link">
         <img src="logo.png" alt="Making Money Blog Logo" class="logo-img">
       </a>
       <span class="brand-slogan no-border">Sustainable Online Income</span>
