--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header-container">
     <!-- Logo -->
     <div class="header-brand">
-      <a href="#" class="logo-link">
+      <a href="" class="logo-link">
         <img src="logo.png" alt="Making Money Blog Logo" class="logo-img">
       </a>
       <span class="brand-slogan no-border">Sustainable Online Income</span>
@@ -74,6 +74,9 @@
                         <li><a href="#website3" class="menu-link">3. Pinecone Research</a></li>
                         <li><a href="#website4" class="menu-link">4. InboxDollars</a></li>
                         <li><a href="#website5" class="menu-link">5. LifePoints</a></li>
+                        <li><a href="#website6" class="menu-link">6. LifePoints</a></li>
+                        <li><a href="#website7" class="menu-link">7. LifePoints</a></li>
+                        
                         <!-- Add other items similarly -->
                     </ul>
                 </nav>
@@ -118,7 +121,7 @@
                 <p>To start earning with Surveoo, first register for a free account and complete your personal profile thoroughly. Once logged in, the system will send suitable surveys to your email or display them directly on your dashboard. Each completed survey earns reward points that can be converted to cash via PayPal or popular gift cards. With consistent participation, you can typically earn between $50 to $100 per month.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website1', 'https://www.upwork.com')">Visit Surveoo</button>
+        <button class="visit-btn" onclick="visitWebsite('website1', 'https://wedebeek.com/click?pid=3128&offer_id=17999')">Visit Surveoo</button>
     </div>
 </div>
 
@@ -211,6 +214,52 @@
             </div>
         </div>
         <button class="visit-btn" onclick="visitWebsite('website5', 'https://www.mturk.com')">Visit LifePoints</button>
+    </div>
+</div>
+<div class="web-item" id="website6">
+    <div class="web-rank">6</div>
+    <div class="web-info">
+        <h3 class="web-name">YouGov – Get Paid for Sharing Opinions</h3>
+        <div class="rating">
+            <div class="stars">★★★★★</div>
+            <span>5/5 - Excellent</span>
+        </div>
+        <strong>Why Choose YouGov?</strong>
+        <p>YouGov stands as a leading global survey platform connecting users with major brands and research initiatives. By spending 5-20 minutes sharing opinions on consumer products and social trends, anyone can earn rewards without prior experience.</p>
+        <div class="web-image">
+          <img src="yougov.jpg" alt="YouGov" loading="lazy">
+        </div>
+        <div class="pros-cons">
+            <div class="pros">
+                <h4>How to Earn with YouGov</h4>
+                <p>Registration begins with a free account setup and profile completion. The system then delivers tailored surveys to your inbox or account dashboard. For each survey finished, you earn 500-5,000 points (1,000 points ≈ $1). These points convert to PayPal withdrawals, gift cards (Amazon, Visa), or charitable donations. Regular participants generally achieve $30-$80 in monthly earnings.
+</p>
+            </div>
+        </div>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://wedebeek.com/click?pid=3128&offer_id=18726')">Visit YouGov</button>
+    </div>
+</div>
+<div class="web-item" id="website7">
+    <div class="web-rank">7</div>
+    <div class="web-info">
+        <h3 class="web-name">InboxPays – Earn Cash for Surveys, Emails, and More</h3>
+        <div class="rating">
+            <div class="stars">★★★★★</div>
+            <span>5/5 - Excellent</span>
+        </div>
+        <strong>Why Choose Inbox Pays?</strong>
+        <p>InboxPays is a trusted online rewards platform that lets you earn money in your spare time by completing simple tasks. Whether it’s sharing your opinions through surveys, reading promotional emails, or testing new products, InboxPays offers multiple ways to generate extra income. No special skills are required—just a few minutes each day can add up to real cash.</p>
+        <div class="web-image">
+          <img src="image/inboxpays" alt="inpoxpays" loading="lazy">
+        </div>
+        <div class="pros-cons">
+            <div class="pros">
+                <h4>How to Earn with Inbox Pays</h4>
+                <p>Getting started is easy. Simply sign up for a free account and verify your email address. Once registered, you’ll begin receiving paid survey invitations and cash-earning opportunities directly in your inbox. Each completed activity earns you rewards, which can be redeemed via PayPal, gift cards, or even direct bank transfers. Active users typically earn anywhere from $30 to $150 per month, depending on their level of participation.
+</p>
+            </div>
+        </div>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://wedebeek.com/click?pid=3128&offer_id=18126')">Visit Inpox Pays</button>
     </div>
 </div>
                     
