--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <strong>Why Choose Inbox Pays?</strong>
         <p>InboxPays is a trusted online rewards platform that lets you earn money in your spare time by completing simple tasks. Whether it’s sharing your opinions through surveys, reading promotional emails, or testing new products, InboxPays offers multiple ways to generate extra income. No special skills are required—just a few minutes each day can add up to real cash.</p>
         <div class="web-image">
-          <img src="InboxPays.jpg" alt="inpoxpays" loading="lazy">
+          <img src="inboxpays.jpg" alt="inboxpays" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
