--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 </p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website6', 'https://wedebeek.com/click?pid=3128&offer_id=18126')">Visit Inpox Pays</button>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://wedebeek.com/click?pid=3128&offer_id=18126')">Visit Inbox Pays</button>
     </div>
 </div>
                     
