--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="test2.png" alt="Related article" loading="lazy">
+                            <img src="hello.jfif" alt="Related article" loading="lazy">
                             <a href=""></a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="">How to make money online without capital</a></h4>
+                            <h4><a href="">HelloSavings Coupons offer pays up to $4/lead for US traffic!</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
