--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
                     <div class="related-item">
                         <div class="related-image">
                             <img src="hello.jfif" alt="Related article" loading="lazy">
-                            <a href=""></a>
+                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3561&aff_id=7168"></a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="">HelloSavings Coupons offer pays up to $4/lead for US traffic!</a></h4>
+                            <h4><a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3561&aff_id=7168">HelloSavings Coupons offer pays up to $4/lead for US traffic!</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
