--- a/index.html
+++ b/index.html
@@ -309,8 +309,9 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
+                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3561&aff_id=7168">
                             <img src="hello.jfif" alt="Related article" loading="lazy">
-                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3561&aff_id=7168"></a>
+                            </a>
                         </div>
                         <div class="related-content">
                             <h4><a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3561&aff_id=7168">HelloSavings Coupons offer pays up to $4/lead for US traffic!</a></h4>
@@ -319,10 +320,12 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="test1.png" alt="Related article" loading="lazy">
+                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3562&aff_id=7168">
+                            <img src="poll.jfif" alt="Related article" loading="lazy">
+                            </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="#">Top 10 money-making apps for smartphones</a></h4>
+                            <h4><a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3562&aff_id=7168">Earn easy cash for each completed survey</a></h4>
                             <div class="related-date">05/06/2024</div>
                         </div>
                     </div>
