--- a/index.html
+++ b/index.html
@@ -331,10 +331,12 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="test3.png" alt="Related article" loading="lazy">
+                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=6657&aff_id=7168">Guide to making money from affiliate marketing
+                            <img src="reach.jpg" alt="Related article" loading="lazy">
+                            </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="#">Guide to making money from affiliate marketing</a></h4>
+                            <h4><a href="https://chameleonads.go2cloud.org/aff_c?offer_id=6657&aff_id=7168">Guide to making money from affiliate marketing</a></h4>
                             <div class="related-date">01/06/2024</div>
                         </div>
                     </div>
