--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p>To start earning with Surveoo, first register for a free account and complete your personal profile thoroughly. Once logged in, the system will send suitable surveys to your email or display them directly on your dashboard. Each completed survey earns reward points that can be converted to cash via PayPal or popular gift cards. With consistent participation, you can typically earn between $50 to $100 per month.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website1', 'https://wedebeek.com/click?pid=3128&offer_id=17999')">Visit Surveoo</button>
+        <button class="visit-btn" onclick="visitWebsite('website1', 'https://track.amcmpn.com/click?pid=29152&offer_id=56679')">Visit Surveoo</button>
     </div>
 </div>
 
@@ -151,23 +151,23 @@
 <div class="web-item" id="website3">
     <div class="web-rank">3</div>
     <div class="web-info">
-        <h3 class="web-name">Pinecone Research – Premium High-Paying Surveys</h3>
+        <h3 class="web-name">Five Surveys – Premium High-Paying Surveys</h3>
         <div class="rating">
             <div class="stars">★★★★★</div>
             <span>5/5 - Excellent</span>
         </div>
-        <strong>Why Choose Pinecone Research?</strong>
-        <p>Pinecone Research specializes in premium surveys for users seeking higher earnings per survey. While the entry requirements are stricter, the rewards are substantially more attractive.</p>
+        <strong>Why Choose Five Surveys?</strong>
+        <p>Five Surveys is the perfect side hustle for Australians who want to earn real cash effortlessly. Unlike gigs that demand specialized skills or time-consuming tasks, you only need to share your opinions through quick, engaging surveys. Just spare 10-20 minutes daily to complete surveys tailored to your interests—no experience required! With instant payouts via PayPal or e-gift cards, Five Surveys turns your free time into a flexible income stream. Whether you’re a student, stay-at-home parent, or just looking for extra pocket money, everyone can benefit from this hassle-free opportunity.</p>
         <div class="web-image">
-          <img src="pineconeresearch.png" alt="PineconeResearch" loading="lazy">
+          <img src="5survey.jpg" alt="5surveys" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
-                <h4>How to Earn with Pinecone Research</h4>
-                <p>After account registration and profile approval, members receive high-quality surveys from major brands paying $3-$5 each – significantly above market rates. Unique opportunities include receiving free products for testing and review. Payments are processed via PayPal or paper check upon request.</p>
+                <h4>How to Earn with Five Surveys</h4>
+                <p>Getting started is simple: Sign up for free, verify your email, and complete your profile to unlock surveys matched to your demographics. Check your dashboard or email regularly for new survey invitations—each completion earns you points redeemable for cash or gift cards. The more surveys you finish, the higher your earnings! On average, active users can pocket $50-$150 monthly by dedicating just 15-30 minutes daily. Payments are processed instantly, so you won’t wait weeks to enjoy your hard-earned rewards.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website3', 'https://www.toptal.com')">Visit Pinecone Research</button>
+        <button class="visit-btn" onclick="visitWebsite('website3', 'https://track.amcmpn.com/click?pid=29152&offer_id=56106')">Visit Five Surveys</button>
     </div>
 </div>
 
@@ -331,7 +331,7 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=6657&aff_id=7168">Guide to making money from affiliate marketing>
+                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=6657&aff_id=7168">
                             <img src="reach.jpg" alt="Related article" loading="lazy">
                             </a>
                         </div>
@@ -392,7 +392,7 @@
           <td>Various ways to make money</td>
         </tr>
         <tr>
-          <td><a href="https://pineconeresearch.com" target="_blank" rel="nofollow sponsored">Pinecone</a></td>
+          <td><a href="https://pineconeresearch.com" target="_blank" rel="nofollow sponsored">Five Surveys</a></td>
           <td>$3 - $5</td>
           <td>7 Day</td>
           <td>Quality survey</td>
@@ -412,7 +412,7 @@
       </tbody>
     </table>
   </div>
-  <p class="tip"><strong>💡 Optimal strategy:</strong> Sign up for all 5 platforms to maximize your earnings!</p>
+  <p class="tip"><strong>💡 Optimal strategy:</strong> Sign up for all platforms to maximize your earnings!</p>
 </section>
         
 <!-- Review list -->
