--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                     <ul class="menu-list">
                         <li><a href="#website1" class="menu-link">1. Surveoo</a></li>
                         <li><a href="#website2" class="menu-link">2. Swagbucks</a></li>
-                        <li><a href="#website3" class="menu-link">3. Pinecone Research</a></li>
+                        <li><a href="#website3" class="menu-link">3. Five surveys</a></li>
                         <li><a href="#website4" class="menu-link">4. InboxDollars</a></li>
                         <li><a href="#website5" class="menu-link">5. LifePoints</a></li>
-                        <li><a href="#website6" class="menu-link">6. LifePoints</a></li>
-                        <li><a href="#website7" class="menu-link">7. LifePoints</a></li>
+                        <li><a href="#website6" class="menu-link">6. YouGov</a></li>
+                        <li><a href="#website7" class="menu-link">7. Inbox Pays</a></li>
                         
                         <!-- Add other items similarly -->
                     </ul>
