--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
 <div class="web-item" id="website2">
     <div class="web-rank">2</div>
     <div class="web-info">
-        <h3 class="web-name">Swagbucks – The Versatile Online Earning Platform</h3>
+        <h3 class="web-name">Prime Opinion – Earn Money Online Through Paid Surveys</h3>
         <div class="rating">
             <div class="stars">★★★★★</div>
             <span>5/5 - Excellent</span>
         </div>
-        <strong>Why Choose Swagbucks?</strong>
-        <p>More than just a survey site, Swagbucks is a comprehensive "earning marketplace" offering multiple income streams. Perfect for users seeking diverse earning opportunities without monotony.</p>
+        <strong>Why Choose Prime Opinion?</strong>
+        <p>Prime Opinion is a leading paid survey platform, perfect for anyone looking to make extra income in their free time. Unlike complicated side hustles, all you need to do is spend 10-15 minutes per day sharing your opinions in simple surveys. No special skills are required—just your honest feedback!</p>
         <div class="web-image">
-          <img src="swagbucks.png" alt="Swagbucks" loading="lazy">
+          <img src="prime.png" alt="Prime" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
-                <h4>How to Earn with Swagbucks</h4>
-                <p>Swagbucks provides flexible earning methods including paid surveys ($0.5-$3 per survey), passive income from watching videos/listening to music, cashback shopping (1%-20% returns), mobile game rewards, and referral commissions. Earnings can be withdrawn via PayPal or redeemed as Amazon gift cards based on your preference.</p>
+                <h4>How to Earn with Prime Opinion</h4>
+                <p>With just a few minutes each day, you can easily earn extra income with Prime Opinion. First, register for a free account and complete your personal profile to receive suitable surveys. Each survey takes only 5-15 minutes, allowing you to quickly accumulate reward points. These points can be redeemed for cash via PayPal, bank transfer, or popular gift cards. With a low minimum payout of just $5 and a fast payment system, you can realistically earn $50-$200 per month simply by sharing your opinions during your spare time.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://www.fiverr.com')">Visit Swagbucks</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://track.amcmpn.com/click?pid=29152&offer_id=51306')">Visit Prime Opinion</button>
     </div>
 </div>
 
