--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h3 class="menu-title">Website List</h3>
                     <ul class="menu-list">
                         <li><a href="#website1" class="menu-link">1. Surveoo</a></li>
-                        <li><a href="#website2" class="menu-link">2. Swagbucks</a></li>
+                        <li><a href="#website2" class="menu-link">2. Prime Opinion</a></li>
                         <li><a href="#website3" class="menu-link">3. Five surveys</a></li>
                         <li><a href="#website4" class="menu-link">4. InboxDollars</a></li>
                         <li><a href="#website5" class="menu-link">5. LifePoints</a></li>
