--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 </p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website6', 'https://wedebeek.com/click?pid=3128&offer_id=18726')">Visit YouGov</button>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://chameleonads.go2cloud.org/aff_c?offer_id=6698&aff_id=7168')">Visit YouGov</button>
     </div>
 </div>
 <div class="web-item" id="website7">
