--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <strong>Why Choose YouGov?</strong>
         <p>YouGov stands as a leading global survey platform connecting users with major brands and research initiatives. By spending 5-20 minutes sharing opinions on consumer products and social trends, anyone can earn rewards without prior experience.</p>
         <div class="web-image">
-          <img src="yougov.jpg" alt="YouGov" loading="lazy">
+          <img src="https://chameleonads.go2cloud.org/aff_i?offer_id=6751&aff_id=7168" alt="YouGov" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
@@ -236,7 +236,7 @@
 </p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website6', 'https://chameleonads.go2cloud.org/aff_c?offer_id=6698&aff_id=7168')">Visit YouGov</button>
+        <button class="visit-btn" onclick="visitWebsite('website6', 'https://chameleonads.go2cloud.org/aff_c?offer_id=6751&aff_id=7168')">Visit YouGov</button>
     </div>
 </div>
 <div class="web-item" id="website7">
