--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
 <div class="web-item" id="website2">
     <div class="web-rank">2</div>
     <div class="web-info">
-        <h3 class="web-name">Prime Opinion – Earn Money Online Through Paid Surveys</h3>
+        <h3 class="web-name">UniqueRewards - Earn $1.8 Per Qualified Lead!</h3>
         <div class="rating">
             <div class="stars">★★★★★</div>
             <span>5/5 - Excellent</span>
         </div>
-        <strong>Why Choose Prime Opinion?</strong>
-        <p>Prime Opinion is a leading paid survey platform, perfect for anyone looking to make extra income in their free time. Unlike complicated side hustles, all you need to do is spend 10-15 minutes per day sharing your opinions in simple surveys. No special skills are required—just your honest feedback!</p>
+        <strong>Why Choose UniqueRewards?</strong>
+        <p>Getting started is simple - users just complete a quick registration with email verification, then finish their first offer or survey. The moment they complete these two easy steps, you instantly earn $1.8 for every valid lead from the US, UK or Canada. The platform works perfectly across both desktop and mobile devices, with real-time conversion tracking so you always know your earnings.</p>
         <div class="web-image">
           <img src="prime.png" alt="Prime" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
-                <h4>How to Earn with Prime Opinion</h4>
-                <p>With just a few minutes each day, you can easily earn extra income with Prime Opinion. First, register for a free account and complete your personal profile to receive suitable surveys. Each survey takes only 5-15 minutes, allowing you to quickly accumulate reward points. These points can be redeemed for cash via PayPal, bank transfer, or popular gift cards. With a low minimum payout of just $5 and a fast payment system, you can realistically earn $50-$200 per month simply by sharing your opinions during your spare time.</p>
+                <h4>How to Earn with UniqueRewards</h4>
+                <p>This offer delivers exceptional value with premium payouts that beat standard CPL rates. You get access to lucrative Tier-1 markets while enjoying the flexibility to use multiple traffic sources - whether it's social media, email campaigns, native ads or SEO. With a minimum 7% conversion requirement and 12 leads per hour cap, you can scale your campaigns profitably while maintaining quality.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://track.amcmpn.com/click?pid=29152&offer_id=51306')">Visit Prime Opinion</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://wedebeek.com/click?pid=3128&offer_id=18646')">Visit UniqueRewards</button>
     </div>
 </div>
 
@@ -227,7 +227,7 @@
         <strong>Why Choose YouGov?</strong>
         <p>YouGov stands as a leading global survey platform connecting users with major brands and research initiatives. By spending 5-20 minutes sharing opinions on consumer products and social trends, anyone can earn rewards without prior experience.</p>
         <div class="web-image">
-          <img src="https://chameleonads.go2cloud.org/aff_i?offer_id=6751&aff_id=7168" alt="YouGov" loading="lazy">
+          <img src="yougov.jpg" alt="YouGov" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
