--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <strong>Why Choose UniqueRewards?</strong>
         <p>Getting started is simple - users just complete a quick registration with email verification, then finish their first offer or survey. The moment they complete these two easy steps, you instantly earn $1.8 for every valid lead from the US, UK or Canada. The platform works perfectly across both desktop and mobile devices, with real-time conversion tracking so you always know your earnings.</p>
         <div class="web-image">
-          <img src="prime.png" alt="Prime" loading="lazy">
+          <img src="uni.png" alt="Prime" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
