--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p>This offer delivers exceptional value with premium payouts that beat standard CPL rates. You get access to lucrative Tier-1 markets while enjoying the flexibility to use multiple traffic sources - whether it's social media, email campaigns, native ads or SEO. With a minimum 7% conversion requirement and 12 leads per hour cap, you can scale your campaigns profitably while maintaining quality.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://wedebeek.com/click?pid=3128&offer_id=18646')">Visit UniqueRewards</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://track.amcmpn.com/click?pid=29152&offer_id=52469')">Visit UniqueRewards</button>
     </div>
 </div>
 
@@ -314,7 +314,7 @@
                             </a>
                         </div>
                         <div class="related-content">
-                            <h4><a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3561&aff_id=7168">HelloSavings Coupons offer pays up to $4/lead for US traffic!</a></h4>
+                            <h4><a href="https://track.amcmpn.com/click?pid=29152&offer_id=56784">HelloSavings Coupons offer pays up to $4/lead for US traffic!</a></h4>
                             <div class="related-date">10/06/2024</div>
                         </div>
                     </div>
