--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <h3 class="related-title">Related Articles</h3>
                     <div class="related-item">
                         <div class="related-image">
-                            <a href="https://chameleonads.go2cloud.org/aff_c?offer_id=3561&aff_id=7168">
+                            <a href="https://track.amcmpn.com/click?pid=29152&offer_id=56784">
                             <img src="hello.jfif" alt="Related article" loading="lazy">
                             </a>
                         </div>
