--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Making Money Blog - Make money online with Yagai">
     <meta property="og:image" content="https://making-money-blog.netlify.app/image/thumbnail.png">
     <meta name="ppck-ver" content="bc5c62b67f210a6730e7b767f39c941e" />
+    <meta name="mylead-verification" content="bd9ea7b269fc9273f4499b3638a2f3b6">
 </head>
 <body>
     <div class="loading-bar" id="loadingBar"></div>
