--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <meta property="og:title" content="Making Money Blog - Make money online with Yagai">
     <meta property="og:image" content="https://making-money-blog.netlify.app/image/thumbnail.png">
     <meta name="ppck-ver" content="bc5c62b67f210a6730e7b767f39c941e" />
-    <meta name="mylead-verification" content="bd9ea7b269fc9273f4499b3638a2f3b6">
 </head>
 <body>
     <div class="loading-bar" id="loadingBar"></div>
@@ -129,23 +128,23 @@
 <div class="web-item" id="website2">
     <div class="web-rank">2</div>
     <div class="web-info">
-        <h3 class="web-name">UniqueRewards - Earn $1.8 Per Qualified Lead!</h3>
+        <h3 class="web-name">Top Surveys – Get Paid Fast for Simple Surveys</h3>
         <div class="rating">
             <div class="stars">★★★★★</div>
             <span>5/5 - Excellent</span>
         </div>
-        <strong>Why Choose UniqueRewards?</strong>
-        <p>Getting started is simple - users just complete a quick registration with email verification, then finish their first offer or survey. The moment they complete these two easy steps, you instantly earn $1.8 for every valid lead from the US, UK or Canada. The platform works perfectly across both desktop and mobile devices, with real-time conversion tracking so you always know your earnings.</p>
+        <strong>Why Choose Top Surveys?</strong>
+        <p>Top Surveys is a great option for anyone looking to make quick cash online by completing short and easy surveys. With no special skills required, it's perfect for people who want to earn extra money in their spare time. One of the key benefits is its Fast Pay system, allowing users to receive their rewards quickly after completing a valid survey.</p>
         <div class="web-image">
-          <img src="uni.png" alt="Prime" loading="lazy">
+          <img src="top.png" alt="Top" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
-                <h4>How to Earn with UniqueRewards</h4>
-                <p>This offer delivers exceptional value with premium payouts that beat standard CPL rates. You get access to lucrative Tier-1 markets while enjoying the flexibility to use multiple traffic sources - whether it's social media, email campaigns, native ads or SEO. With a minimum 7% conversion requirement and 12 leads per hour cap, you can scale your campaigns profitably while maintaining quality.</p>
+                <h4>How to Earn with Top Surveys</h4>
+                <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://track.amcmpn.com/click?pid=29152&offer_id=52469')">Visit UniqueRewards</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnkmeup.com/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
@@ -343,10 +342,10 @@
                     </div>
                     <div class="related-item">
                         <div class="related-image">
-                            <img src="test4.png" alt="Related article" loading="lazy">
+                            <img src="game.png" alt="Related article" loading="lazy">
                         </div>
                         <div class="related-content">
-                            <h4><a href="#">Online money-making scam warnings</a></h4>
+                            <h4><a href="https://lnkmeup.com/view.php?id=5541119&pub=3283402">Get Paid to Play Games!</a></h4>
                             <div class="related-date">25/05/2024</div>
                         </div>
                     </div>
