--- a/index.html
+++ b/index.html
@@ -197,23 +197,23 @@
 <div class="web-item" id="website5">
     <div class="web-rank">5</div>
     <div class="web-info">
-        <h3 class="web-name">LifePoints – Global Survey Community</h3>
+        <h3 class="web-name">Prime Opinion – Global Survey Community</h3>
         <div class="rating">
             <div class="stars">★★★★☆</div>
             <span>4/5 - Good</span>
         </div>
-        <strong>Why Choose LifePoints?</strong>
+        <strong>Why Choose Prime Opinion?</strong>
         <p>LifePoints is a reputable international survey platform, ideal for users seeking quality surveys from multinational brands.</p>
         <div class="web-image">
-          <img src="lifepoints.png" alt="LifePoints" loading="lazy">
+          <img src="prime.png" alt="LifePoints" loading="lazy">
         </div>
         <div class="pros-cons">
             <div class="pros">
-                <h4>How to Earn with LifePoints</h4>
+                <h4>How to Earn with Prime Opinion</h4>
                 <p>Members participate in product/service surveys earning $1-$4 each. Accumulated points (550 points = $5.50) can be redeemed via PayPal. Regularly updating your profile increases survey opportunities.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website5', 'https://www.mturk.com')">Visit LifePoints</button>
+        <button class="visit-btn" onclick="visitWebsite('website5', 'https://track.amcmpn.com/click?pid=29152&offer_id=51306')">Visit Prime Opinion</button>
     </div>
 </div>
 <div class="web-item" id="website6">
