--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p>To start, simply sign up for a free account and complete the survey provided. Each valid survey submission earns you $3.90 USD, and the offer is available on any device. Surveys are short, typically taking just 10–15 minutes to finish. Please note that only users from the United States are eligible, and the use of VPNs or proxy traffic is strictly prohibited. With a daily cap of 25 leads, it’s best to share your unique link early in the day to secure conversions. Whether you’re a student, a stay-at-home parent, or just looking for side income, Top Surveys offers a fast, simple, and reliable way to get paid online.</p>
             </div>
         </div>
-        <button class="visit-btn" onclick="visitWebsite('website2', 'https://lnkmeup.com/view.php?id=5541500&pub=3283402')">Visit Top Surveys</button>
+        <button class="visit-btn" onclick="visitWebsite('website2', 'https://directcpi.com/view.php?id=5539926&pub=3283402')">Visit Top Surveys</button>
     </div>
 </div>
 
